
APPEND_SOURCE_FILES(SOURCES)
APPEND_SOURCE_FILES(SOURCES FEMIO)
APPEND_SOURCE_FILES(SOURCES MeshIO)
APPEND_SOURCE_FILES(SOURCES MathIO)

# Create the library
ADD_LIBRARY( FileIO STATIC
	${SOURCES}
)

INCLUDE_DIRECTORIES(
	${CMAKE_SOURCE_DIR}/FileIO
	${CMAKE_SOURCE_DIR}/FileIO/FEMIO
	${CMAKE_SOURCE_DIR}/FileIO/MathIO
	${CMAKE_SOURCE_DIR}/FileIO/MeshIO
	${CMAKE_SOURCE_DIR}/Base
	${CMAKE_SOURCE_DIR}/FEM
	${CMAKE_SOURCE_DIR}/GEO
	${CMAKE_SOURCE_DIR}/Math
	${CMAKE_SOURCE_DIR}/MSH
)

TARGET_LINK_LIBRARIES( FileIO
	Base
	GEO
	FEM
)

