# Source files

APPEND_SOURCE_FILES(SOURCES)

include_directories(
	${CMAKE_SOURCE_DIR}/Base
	${CMAKE_SOURCE_DIR}/Math
	${CMAKE_SOURCE_DIR}/FEM
	${CMAKE_SOURCE_DIR}/FEM/FileIO
	${CMAKE_SOURCE_DIR}/GEO
	${CMAKE_SOURCE_DIR}/GEO/FileIO
	${CMAKE_SOURCE_DIR}/MAT
	${CMAKE_SOURCE_DIR}/MSH
	${CMAKE_SOURCE_DIR}/MSH/FileIO
	${CMAKE_SOURCE_DIR}/PCS
	${CMAKE_SOURCE_DIR}/ThirdParty
)

IF (PARALLEL_USE_MPI)
	INCLUDE_DIRECTORIES(${MPI_INCLUDE_PATH})
ENDIF (PARALLEL_USE_MPI)

# Create the library
add_library( MAT STATIC ${SOURCES} )

target_link_libraries(MAT
	Base
	GEO
	MSH
)

