APPEND_SOURCE_FILES(SOURCES)

if(NOT OGS_FEM_PETSC)
	LIST(REMOVE_ITEM SOURCES msh_lib_ext.cpp)
endif()

include_directories(
	${CMAKE_SOURCE_DIR}/MSH
	${CMAKE_SOURCE_DIR}/Base
	${CMAKE_SOURCE_DIR}/GEO
	${CMAKE_SOURCE_DIR}/Math
	${CMAKE_SOURCE_DIR}/FileIO
	${CMAKE_SOURCE_DIR}/FEM
	${CMAKE_SOURCE_DIR}/LIB
	${CMAKE_SOURCE_DIR}/OGSProject
)

# Create the library
add_library(MSH STATIC ${SOURCES})

target_link_libraries(
	MSH
	FEM
	FileIO
	GEO
	${CMAKE_THREAD_LIBS_INIT}
)
