# Source files

APPEND_SOURCE_FILES(SOURCES)

IF(NOT OGS_FEM_PETSC)
	LIST(REMOVE_ITEM SOURCES rf_pcs1.cpp)
ENDIF()

IF(OGS_ONLY_TH)
	LIST(REMOVE_ITEM SOURCES rf_random_walk.h rf_random_walk.cpp)
ENDIF( )

include_directories(
	${CMAKE_SOURCE_DIR}/Base
	${CMAKE_SOURCE_DIR}/FEM
	${CMAKE_SOURCE_DIR}/FEM/FileIO
	${CMAKE_SOURCE_DIR}/GEO
	${CMAKE_SOURCE_DIR}/GEO/FileIO
	${CMAKE_SOURCE_DIR}/Math
	${CMAKE_SOURCE_DIR}/MAT
	${CMAKE_SOURCE_DIR}/MSH
	${CMAKE_SOURCE_DIR}/MSH/FileIO
	${CMAKE_SOURCE_DIR}/PCS
	${CMAKE_SOURCE_DIR}/ThirdParty
)

IF (PARALLEL_USE_MPI)
	INCLUDE_DIRECTORIES(${MPI_INCLUDE_PATH})
ENDIF (PARALLEL_USE_MPI)

# Create the library
add_library( PCS STATIC ${SOURCES} )

target_link_libraries(PCS
	Base
	GEO
	MSH
	FEM
	MAT
)

